# uplox

./: .gitignore  CHANGELOG.md  README.md  WIP.md  pyproject.toml
.github/workflows/: pytest.yml
docs/: c_backend.md  conflict_resolution.md  cookbook.md  cpp_backend.md  grammar_format.md  history.md  lr_modes.md  lua_backend.md  py_backend.md  semantics.md  tutorial.md
docs/proposals/: auto_ast.md  calc_annotated.md  columns.md  continuation.md  cowgol_annotated.md  layout.md
examples/: ada_corpus.py  ada_full.plox  ada_full.uplox  ada_full.xfail  ada_subset.plox  ada_subset.uplox  ambig_expr.plox  ambig_expr.uplox  c23.plox  c23.uplox  c_expr.uplox  c_subset.plox  c_subset.uplox  calc.plox  calc.uplox  calc_ast.uplox  cobol.uplox  cowgol.uplox  cowgol_ast.uplox  cpp.uplox  csharp.uplox  delphi.uplox  fortran77.uplox  go.uplox  java.uplox  javascript.uplox  json.uplox  kotlin.uplox  pascal.uplox  plm_full.plox  plm_full.uplox  plm_pre.plox  plm_pre.uplox  plm_subset.plox  plm_subset.uplox  plox_self.plox  python.uplox  rust.uplox  scoped.plox  scoped.uplox  (+5 more)
src/plox/: __init__.py
src/plox/ast/: __init__.py
src/plox/cli/: __init__.py  main.py
src/plox/hooks/: __init__.py
src/plox/lex/: __init__.py  build.py  dfa.py  nfa.py  regex.py  scanner.py
src/plox/parse/: __init__.py  grammar.py  lr1.py  runtime.py
src/plox/parse/glr/: __init__.py  runtime.py  table.py
src/plox/preprocess/: __init__.py  plm.py
src/plox/spec/: __init__.py  ir.py  reader.py
src/plox/tables/: __init__.py  lex_section.py  parse_section.py  schema.py
src/uplox/: __init__.py
src/uplox/ast/: __init__.py
src/uplox/cli/: __init__.py  main.py
src/uplox/hooks/: __init__.py  generic_brackets.py
src/uplox/lex/: build.py  dfa.py  filters.py  nfa.py  regex.py  scanner.py
src/uplox/parse/: __init__.py  grammar.py  lr1.py  runtime.py
src/uplox/parse/glr/: __init__.py  table.py
src/uplox/preprocess/: __init__.py  plm.py
src/uplox/spec/: __init__.py  ast_plan.py  ir.py  reader.py
src/uplox/tables/: __init__.py  ast_section.py  lex_section.py  parse_section.py  schema.py
tests/: test_ast.py  test_cli_build.py  test_gen_c.py  test_gen_cpp.py  test_gen_lua.py  test_gen_py.py  test_generic_brackets.py  test_grammar_fixtures.py  test_hooks.py  test_lex_dfa.py  test_lex_nfa.py  test_lex_regex.py  test_lex_scanner.py  test_parse_glr.py  test_parse_grammar.py  test_parse_lr1.py  test_parse_runtime.py  test_phase5_plm.py  test_phase9_c23.py  test_phase9_c_subset.py  test_phase9_plm_full.py  test_phase_v3_c_expr.py  test_phase_v3_c_subset.py  test_phase_v3_c_subset_p3.py  test_phase_v3_c_subset_p4.py  test_phase_v3_c_subset_p5.py  test_phase_v3_calc_ast.py  test_phase_v3_cowgol_ast.py  test_preprocess_plm.py  test_self_host.py  test_smoke.py  test_spec_ast_plan.py  test_spec_keywords.py  test_spec_reader.py  test_spec_rules.py  test_tables_ast_section.py  test_tables_lex_section.py  test_tables_parse_section.py  test_tables_schema.py
tests/fixtures/: bdos_prefix.plm
tests/fixtures/go/: features.go
tests/fixtures/javascript/: features.js
tests/fixtures/json/: sample.json
tests/fixtures/kotlin/: features.kt
tests/fixtures/python/: features.py  hello.py
tests/fixtures/rust/: features.rs
tests/fixtures/swift/: features.swift
tests/fixtures/typescript/: features.ts
tests/fixtures/uc80/: hello2.c  test_arith.c  test_break.c  test_compound.c  test_ctype.c  test_enum.c  test_fileio.c  test_global.c  test_incdec.c  test_long_init.c  test_long_simple.c  test_null_eof.c  test_setjmp.c  test_static.c  test_string.c  test_string2.c  test_struct.c  test_struct2.c  test_switch.c  test_ternary.c  test_typedef.c  test_unsigned.c
