[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name: "uplox" (the matplotlib-helper "plox" already
# squats the bare name on PyPI). The Python module, the CLI binary,
# the GitHub repo, and the .plox grammar format keep the original
# "plox" name. Users install via `pip install uplox` and import via
# `import plox` (setuptools allows the dist name and the import name
# to differ; cf. python-dateutil → dateutil).
name = "uplox"
version = "2.0.0"
description = "Compiler front-end generator: grammar source to canonical JSON tables plus C/C++/Python/Lua drivers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = []
authors = [
    {name = "plox developers"}
]
keywords = [
    "compiler", "compiler-compiler", "parser-generator", "lexer-generator",
    "lr1", "glr", "lalr", "yacc", "bison", "flex",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/avwohl/plox"
Repository = "https://github.com/avwohl/plox"
Issues = "https://github.com/avwohl/plox/issues"

[project.scripts]
plox = "plox.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["plox*"]

[tool.setuptools.package-data]
plox = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
