[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Renamed end-to-end to "uplox" to avoid the matplotlib-helper "plox"
# squat on PyPI. PyPI dist, GitHub repo, Python module, CLI binary,
# and .uplox grammar file extension all use the new name.
name = "uplox"
version = "3.0.0"
description = "Compiler front-end generator: grammar source to canonical JSON tables plus C/C++/Python/Lua drivers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = []
authors = [
    {name = "uplox developers"}
]
keywords = [
    "compiler", "compiler-compiler", "parser-generator", "lexer-generator",
    "lr1", "glr", "lalr", "yacc", "bison", "flex",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/avwohl/uplox"
Repository = "https://github.com/avwohl/uplox"
Issues = "https://github.com/avwohl/uplox/issues"

[project.scripts]
uplox = "uplox.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["uplox*"]

[tool.setuptools.package-data]
uplox = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
